--- a/package.json
+++ b/package.json
@@ -36,8 +36,10 @@
 	"type": "module",
 	"dependencies": {
 		"@prisma/client": "^4.13.0",
+		"@types/bcrypt": "^5.0.0",
 		"@types/jsonwebtoken": "^9.0.2",
 		"axios": "^1.4.0",
+		"bcrypt": "^5.1.0",
 		"jsonwebtoken": "^9.0.0"
 	}
 }
