--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"@types/jsonwebtoken": "^9.0.2",
 		"axios": "^1.4.0",
 		"bcrypt": "^5.1.0",
-		"jsonwebtoken": "^9.0.0"
+		"jsonwebtoken": "^9.0.0",
+		"openai": "^3.2.1"
 	}
 }
